<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ArticulosActivity.addArt">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/txt_TitleArticulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_articulo"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.782" />

    <TextView
        android:id="@+id/txt_codigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_codigo_articulo"
        app:layout_constraintBottom_toTopOf="@+id/edt_Codigo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.339"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <TextView
        android:id="@+id/txt_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_descripcion_articulo"
        app:layout_constraintBottom_toTopOf="@+id/edt_Descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.377"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline30" />

    <TextView
        android:id="@+id/txt_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_stock_articulo"
        app:layout_constraintBottom_toTopOf="@+id/edt_Stock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline45" />

    <TextView
        android:id="@+id/txt_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_categoria_articulo"
        app:layout_constraintBottom_toTopOf="@+id/spin_categoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline60" />

    <EditText
        android:id="@+id/edt_Codigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Codigo"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/guideline30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_codigo" />

    <EditText
        android:id="@+id/edt_Descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Descripcion"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/guideline45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_descripcion" />

    <EditText
        android:id="@+id/edt_Stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Stock"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/guideline60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_stock" />

    <Button
        android:id="@+id/btn_det_Modificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_agregar"
        app:layout_constraintBottom_toTopOf="@+id/guideline95"
        app:layout_constraintEnd_toStartOf="@+id/btn_Regresar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline75"
        app:layout_constraintVertical_bias="0.51" />

    <Button
        android:id="@+id/btn_Regresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_regresar"
        app:layout_constraintBottom_toTopOf="@+id/guideline95"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_det_Modificar"
        app:layout_constraintTop_toTopOf="@+id/guideline75"
        app:layout_constraintVertical_bias="0.51" />

    <Spinner
        android:id="@+id/spin_categoria"
        android:layout_width="213dp"
        android:layout_height="43dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_categoria"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>