<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.LoginActivity.RegisterFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/txt_TitleRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_register"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.782" />

    <TextView
        android:id="@+id/txt_User"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_user_register"
        app:layout_constraintBottom_toTopOf="@+id/edt_User"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <TextView
        android:id="@+id/txt_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_email_register"
        app:layout_constraintBottom_toTopOf="@+id/edt_Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline30" />

    <TextView
        android:id="@+id/txt_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_password1_register"
        app:layout_constraintBottom_toTopOf="@+id/edt_Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline45" />

    <TextView
        android:id="@+id/txt_Password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_password2_register"
        app:layout_constraintBottom_toTopOf="@+id/edt_Password2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline60" />

    <EditText
        android:id="@+id/edt_User"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Usuario"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guideline30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_User" />

    <EditText
        android:id="@+id/edt_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/guideline45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Email" />

    <EditText
        android:id="@+id/edt_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/guideline60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Password" />

    <EditText
        android:id="@+id/edt_Password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/guideline75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Password2" />

    <Button
        android:id="@+id/btn_Registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_registrar"
        app:layout_constraintBottom_toTopOf="@+id/guideline95"
        app:layout_constraintEnd_toStartOf="@+id/btn_Regresar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline75"
        app:layout_constraintVertical_bias="0.51" />

    <Button
        android:id="@+id/btn_Regresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_regresar"
        app:layout_constraintBottom_toTopOf="@+id/guideline95"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_Registrar"
        app:layout_constraintTop_toTopOf="@+id/guideline75"
        app:layout_constraintVertical_bias="0.51" />

</androidx.constraintlayout.widget.ConstraintLayout>