<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ArticulosDetalle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ArticulosActivity.ArticulosDetalle">

    <TextView
        android:id="@+id/txt_codigo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_codigo_articulo"
        app:layout_constraintBottom_toTopOf="@+id/edt_detCodigo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/txt_descripcion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_descripcion_articulo"
        app:layout_constraintBottom_toTopOf="@+id/edt_detDescripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline65" />

    <TextView
        android:id="@+id/txt_stock2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_stock_articulo"
        app:layout_constraintBottom_toTopOf="@+id/edt_detStock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_detDescripcion" />

    <TextView
        android:id="@+id/txt_categoria2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_categoria_articulo"
        app:layout_constraintBottom_toTopOf="@+id/spin_detCategoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_detStock" />

    <EditText
        android:id="@+id/edt_detCodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Codigo"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/txt_descripcion2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_codigo2"
        android:autofillHints="@string/Codigo" />

    <EditText
        android:id="@+id/edt_detDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/Descripcion"
        android:ems="10"
        android:hint="@string/Descripcion"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_descripcion2" />

    <EditText
        android:id="@+id/edt_detStock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/Stock"
        android:ems="10"
        android:hint="@string/Stock"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_stock2" />

    <Spinner
        android:id="@+id/spin_detCategoria"
        android:layout_width="213dp"
        android:layout_height="43dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline95"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_categoria2" />

    <ImageView
        android:id="@+id/img_CatActual"
        android:layout_width="361dp"
        android:layout_height="217dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/Descripcion"
        android:scaleType="fitXY"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/txt_TitleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_detallearticulo"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.86" />

    <Button
        android:id="@+id/btn_det_Modificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_modificar"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.697"
        app:layout_constraintStart_toEndOf="@+id/edt_detStock"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <Button
        android:id="@+id/btn_cat_Regresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_regresar"
        app:layout_constraintBottom_toTopOf="@+id/guideline95"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toEndOf="@+id/spin_detCategoria"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

</androidx.constraintlayout.widget.ConstraintLayout>